fix homepage spacing
the h1/h2 headers were too big on the main page, but not on the article page.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -68,6 +68,7 @@ li {
 }
 
 .entry-title {
+    margin-top: 2rem;
     margin-bottom: 0;
     font-size: 3.0rem
 }
